--- a/Проект по предобработке и анализу данных/Сборный проект №1.ipynb
+++ b/Проект по предобработке и анализу данных/Сборный проект №1.ipynb
@@ -486,7 +486,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Предобработка данных."
+    "## Предобработка данных."
    ],
    "metadata": {}
   },
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Проведем исследовательский анализ данных"
+    "## Проведем исследовательский анализ данных"
    ],
    "metadata": {}
   },
@@ -6664,7 +6664,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Составьте портрет пользователя каждого региона"
+    "## Составьте портрет пользователя каждого региона"
    ],
    "metadata": {}
   },
@@ -7078,7 +7078,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Проверка гипотез"
+    "## Проверка гипотез"
    ],
    "metadata": {}
   },
@@ -7261,7 +7261,9 @@
      }
     }
    ],
-   "metadata": {}
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
