--- a/4.Yandex_Real_Estate/3_Яндекс_недвижимость.ipynb
+++ b/4.Yandex_Real_Estate/3_Яндекс_недвижимость.ipynb
@@ -40,13 +40,7 @@
     "colab": {
       "name": "3.Яндекс недвижимость.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "HOjXkI8J-7-V",
-        "9PA5w0F4-7-V",
-        "E2o_MIR0-7-X",
-        "Jxmt6VWD-7-Y",
-        "DTFUgtZ2-7-a"
-      ]
+      "collapsed_sections": []
     }
   },
   "cells": [
