--- a/4.Yandex_Real_Estate/3_Яндекс_недвижимость.ipynb
+++ b/4.Yandex_Real_Estate/3_Яндекс_недвижимость.ipynb
@@ -74,7 +74,9 @@
         "import seaborn as sns\n",
         "pd.set_option('display.max_columns', None)\n",
         "pd.set_option('display.max_colwidth', 30)\n",
-        "pd.options.display.float_format = '{:.2f}'.format"
+        "pd.options.display.float_format = '{:.2f}'.format\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -5871,18 +5873,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MQUjq5qk-7-n"
-      },
-      "source": [
-        "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "scrolled": false,
         "id": "vV6CWk0V-7-o",
         "outputId": "e204e280-4c6d-40b0-d9d0-f7ada870c5a3"
@@ -6056,21 +6046,6 @@
           "metadata": {},
           "output_type": "execute_result"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GAWEHKQ3-7-o"
-      },
-      "source": [
-        "\n",
-        "<div class=\"alert alert-block alert-warning\">\n",
-        "    \n",
-        "Такие предупрежденияя пандаса можно отключить\n",
-        "    \n",
-        "    import warnings\n",
-        "    warnings.filterwarnings(\"ignore\")"
       ]
     },
     {
