--- a/8.SQL_queries/SQL-запросы.ipynb
+++ b/8.SQL_queries/SQL-запросы.ipynb
@@ -23,6 +23,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WshlCYeJ9Qlt"
+      },
+      "source": [
+        "Найдите количество рейсов на каждой модели самолёта с вылетом в сентябре 2018 года. Столбцы в таблице должны быть выведены в следующем порядке: model, flights_amount.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SMIzxNUWVasF"
@@ -59,6 +68,15 @@
       },
       "source": [
         "# Задача 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ui1QxxqG93hA"
+      },
+      "source": [
+        "Посчитайте отправленные в сентябре рейсы самолётов следующих моделей: Boeing, Airbus, другие (“other”). Назовите получившуюся переменную flights_amount и выведите её значение на экран."
       ]
     },
     {
@@ -104,6 +122,15 @@
       },
       "source": [
         "# Задача 3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nA3NTvt696NZ"
+      },
+      "source": [
+        "Посчитайте среднее количество прибывающих рейсов в день для каждого города за август 2018 года. Назовите получившееся поле average_flights, вместе с ним выведите столбец city. Выводите столбцы в таком порядке: city, average_flights."
       ]
     },
     {
@@ -153,6 +180,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4YEJqFWR98d6"
+      },
+      "source": [
+        "Установите фестивали, которые проходили с 23 июля по 30 сентября 2018 года в Москве, и номер недели, в которую они проходили. Выведите название фестиваля festival_name и номер недели festival_week."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "nE65FOvuw9HY"
@@ -187,6 +223,15 @@
       },
       "source": [
         "# Задача 5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rg7sQYJY9-c4"
+      },
+      "source": [
+        "Для каждой недели с 23 июля по 30 сентября 2018 года посчитайте билеты, которые купили на рейсы в Москву (номер недели week_number и количество билетов ticket_amount). Выводите столбцы в таком порядке: - week_number - ticket_amount - festival_week - festival_name."
       ]
     },
     {
